# mathcp

./: .gitignore  README.md  debug_equation.py  demo_geometry.py  docker-compose.yml  pyproject.toml  solve_cubic_test.py  solve_your_equation.py  test_algebra_equation.py  test_equation_api.py  test_existing_algebra.py
agents/mathagent/: langgraph.json  requirements.txt
agents/mathagent/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
agents/mathagent/agent/: graph.py  state.py
docker/: Dockerfile.fin  Dockerfile.math  README.md  nginx.conf
docs/: ARCHITECTURE.md  prd.md
docs/architecture/: 1-overview.md  10-performance-considerations.md  11-example-usage.md  12-migration-benefits.md  13-deployment-options-aws.md  14-next-steps.md  1a-architecture-diagram.md  2-architectural-principles.md  3-high-level-component-diagram.md  4-key-design-decisions.md  5-new-mcp-interface-design.md  6-vector-search-implementation.md  7-implementation-phases.md  8-component-separation-mcp-integration.md  9-technology-stack.md  index.md
docs/archive/stories/: api_reference.md  epic-math-genius-tools.md  story-3-advanced-mathematics.md  story-4-mcp-integration.md
docs/archive/stories/story-1-tasks/: 01_scaffold_project_structure.md  02_core_validation_and_error_handling.md  03_arithmetic_operations.md  04_algebraic_functions.md  06_documentation_and_examples.md  07_testing_and_quality_assurance.md
docs/archive/stories/story-2-tasks/: 01_geometric_shapes_module.md  03_coordinate_geometry_module.md  06_testing_documentation.md
docs/archive/stories/story-3-tasks/: 03_statistics_probability_module.md  04_symbolic_mathematics_module.md  06_integration_api_layer.md  07_testing_documentation.md
docs/archive/stories/story-4-tasks/: 05_error_handling_response_formatting.md
docs/prd/: 1-executive-summary.md  10-risk-assessment.md  11-experimental-success-criteria.md  12-experimental-roadmap.md  2-product-overview.md  3-product-architecture.md  4-functional-requirements.md  5-non-functional-requirements.md  6-technical-specifications.md  7-user-stories.md  8-local-deployment-and-operations.md  9-testing-strategy.md  appendices.md  index.md
docs/stories/: 1.0.intelligent-mcp-server.md  1.1.search-tool-implementation.md  1.2.execute-tool-implementation.md  epic-math-genius-tools.md  story-1-basic-arithmetic-algebra.md  story-2-geometry-trigonometry.md
docs/stories/story-1-tasks/: 05_unified_api_layer.md
docs/stories/story-2-tasks/: 02_trigonometric_functions_module.md  04_spatial_operations_module.md  05_integration_api_layer.md
docs/stories/story-3-tasks/: 01_calculus_operations_module.md  02_linear_algebra_module.md  05_advanced_libraries_setup.md
docs/stories/story-4-tasks/: 01_mcp_server_foundation.md  02_tool_discovery_registration.md  03_json_schema_generation.md  04_mcp_tool_implementation.md  06_testing_documentation_deployment.md
docs/tech_docs/: advanced-mathematics-guide.md  basic-arithmetic-algebra-guide.md  geometry-trigonometry-guide.md
intelligent-mcp-server/: CLAUDE_DESKTOP_SETUP.md  claude_desktop_config.json  initialize_vector_db.py  pyproject.toml
intelligent-mcp-server/intelligent_mcp_server/: __init__.py  config.py  server.py
intelligent-mcp-server/intelligent_mcp_server/execute/: __init__.py
intelligent-mcp-server/intelligent_mcp_server/search/: __init__.py  embeddings.py  vector_search.py
intelligent-mcp-server/tests/: test_execute_functionality.py
math-mcp-server/: README.md  initialize_vector_db.py  pyproject.toml
math-mcp-server/math_mcp_server/: config.py  server.py
math-mcp-server/math_mcp_server/execute/: tool_executor.py
math-mcp-server/math_mcp_server/search/: tool_indexer.py
math-mcp-server/tests/: test_search_functionality.py
mathgenius/: __init__.py  pyproject.toml  setup.py
mathgenius/advanced/: __init__.py  calculus.py  linear_algebra.py  statistics.py  symbolic.py
mathgenius/algebra/: equations.py  polynomials.py
mathgenius/api/: dispatcher.py
mathgenius/arithmetic/: operations.py
mathgenius/core/: errors.py
mathgenius/geometry/: __init__.py  coordinates.py  trigonometry.py
mathgenius/mathgenius/advanced/: linear_algebra.py  symbolic.py
mathgenius/mathgenius/algebra/: __init__.py  equations.py
mathgenius/mathgenius/api/: dispatcher.py
mathgenius/mathgenius/arithmetic/: __init__.py  operations.py
mathgenius/mathgenius/core/: validation.py
mathgenius/mathgenius/geometry/: shapes.py  spatial.py
mathgenius/tests/: test_advanced_calculus.py  test_advanced_linear_algebra.py  test_advanced_statistics.py  test_advanced_symbolic.py  test_arithmetic.py  test_geometry_integration.py  test_geometry_shapes.py  test_geometry_spatial.py
mgenius-mcp/: README.md  __init__.py  claude_desktop_config.json  error_handling.py  fastmcp_simple.py  handlers.py  mcp_server.py  pyproject.toml  server.py  simple_mcp_server.py  test_discovery.py
mgenius-mcp/mgenius_mcp/: __init__.py  config.py  schema_validation.py  schemas.py  tools.py
mgenius-mcp/tests/: test_integration.py  test_mcp_server.py
tests/: test_advanced_statistics.py  test_advanced_symbolic.py  test_algebra.py  test_geometry_coordinates.py  test_geometry_trigonometry.py  test_results.txt  test_results.txtPYTHONPATH=.
yfinance-mcp-server/: claude_desktop_config.json  pyproject.toml
yfinance-mcp-server/yfinance_mcp_server/: calculators.py  config.py  models.py  news_service.py  server.py  stock_data.py  stock_data_simple.py
