[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intelligent-mcp-server"
version = "1.0.0"
description = "Intelligent MCP Server with Search and Execute Tools for Mathematical Functions"
authors = [{name = "Math Genius Team", email = "team@mathgenius.com"}]
readme = "README.md"
requires-python = ">=3.12"
keywords = ["mcp", "mathematical", "tools", "search", "execute"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastmcp>=2.10.6",
    "chromadb>=1.0.15",
    "sentence-transformers>=2.2.2",
    "pydantic>=2.5.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "sympy>=1.12",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "mathgenius>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/mathgenius/intelligent-mcp-server"
Documentation = "https://github.com/mathgenius/intelligent-mcp-server/docs"
Repository = "https://github.com/mathgenius/intelligent-mcp-server"
Issues = "https://github.com/mathgenius/intelligent-mcp-server/issues"

[project.scripts]
intelligent-mcp-server = "intelligent_mcp_server.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["intelligent_mcp_server*"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=intelligent_mcp_server --cov-report=html --cov-report=term-missing --cov-fail-under=95"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
