[project]
name = "math-tools"
version = "0.2.0"
description = "Modular math library for foundational to advanced mathematics."
requires-python = ">=3.12"

dependencies = [
    "sympy>=1.12",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mathgenius*"]
exclude = ["tech_docs*", "docs*", "tests*"]
