[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mgenius-mcp"
version = "0.1.0"
description = "MCP (Model Context Protocol) server for Math Genius mathematical tools"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Math Genius Team", email = "dev@mathgenius.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "fastmcp>=2.10.5",
    "pydantic>=2.0.0",
    "uvicorn>=0.35.0",
    "fastapi>=0.116.0",
    "python-multipart>=0.0.6",
    "mathgenius>=0.1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "httpx>=0.24.0"
]

[project.urls]
Homepage = "https://github.com/mathgenius/mgenius-mcp"
Repository = "https://github.com/mathgenius/mgenius-mcp"
Documentation = "https://docs.mathgenius.com/mcp"
Issues = "https://github.com/mathgenius/mgenius-mcp/issues"

[project.scripts]
mgenius-mcp = "mgenius_mcp.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mgenius_mcp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=mgenius_mcp --cov-report=html --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
